--- a/src/app/pokemon/pages/layaout-page/layaout-page.component.html
+++ b/src/app/pokemon/pages/layaout-page/layaout-page.component.html
@@ -3,6 +3,10 @@
     <div class="titlecontainer">
       <h1>Pokedex</h1>
     </div>
+    <div class="filter-container">
+      <input type="text" [(ngModel)]="searchTerm" placeholder="Search pokemon..." (input)="applyFilter()">
+    </div>
+
   </header>
 
   <div class="container">
@@ -13,7 +17,7 @@
          [infiniteScrollUpDistance]="1.5"
          [infiniteScrollThrottle]="300"
          (scrolled)="onScroll()">
-      <app-tarjetas-pokemon  *ngFor="let pokemon of pokemons" [data]="pokemon" (clickeado)="tarjetaClickeada($event)" ></app-tarjetas-pokemon>
+      <app-tarjetas-pokemon  *ngFor="let pokemon of filteredPokemons" [data]="pokemon" (clickeado)="tarjetaClickeada($event)" ></app-tarjetas-pokemon>
     </div>
   </div>
   <footer></footer>
