--- a/src/app/pokemon/pages/detalle-pokemon/detalle-pokemon.component.html
+++ b/src/app/pokemon/pages/detalle-pokemon/detalle-pokemon.component.html
@@ -1,21 +1,29 @@
-
+<!-- layaout-page.component.html -->
 <div class="container">
-  <img src="{{pokemon.sprites.front_default}}" *ngIf="pokemon">
-  <div *ngIf="pokemon">
+  <img src="{{pokemon.sprites?.front_default}}" *ngIf="pokemon" class="pokemon-image">
+
+
+  <div *ngIf="pokemon" class="pokemon-details">
     <h3>Habilidades:</h3>
-    <ul>
-      <li *ngFor="let ability of pokemon.abilities">
+    <ul class="abilities-list">
+      <li *ngFor="let ability of pokemon.abilities" class="ability-item">
         {{ ability.ability.name }}
       </li>
     </ul>
 
-   <!-- layaout-page.component.html -->
-<h3>Tipo:</h3>
-<ul>
-  <li *ngFor="let tipo of pokemon.types" [ngClass]="getTipoClass(tipo.type.name)">
-    {{ tipo.type.name }}
-  </li>
-</ul>
-
+    <h3>Tipo:</h3>
+    <ul class="types-list">
+      <li *ngFor="let tipo of pokemon.types" [ngClass]="getTipoClass(tipo.type.name)">
+        {{ tipo.type.name }}
+      </li>
+    </ul>
+    <h3>Peso:</h3>
+    <span class="pokemon-weight">{{pokemon.weight}}</span>
+    <h3>Altura:</h3>
+    <span class="pokemon-height">{{pokemon.height}}</span>
+    <h3>Especie:</h3>
+    <span class="pokemon-species">{{pokemon.species?.name}}</span>
   </div>
 </div>
+
+
